# WoodSavaBot

./: .env.example  .gitignore  AGENTS.md  LIVE_PLAN.md  README.md  pyproject.toml
deploy/systemd/: wood-sava-bot.service
src/wood_sava_bot/: __init__.py  app.py  config.py  log_config.py  main.py
src/wood_sava_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wood_sava_bot/adapters/: __init__.py  base.py  max_adapter.py  telegram.py  vk.py
src/wood_sava_bot/domain/: enums.py  flows.py  models.py
src/wood_sava_bot/services/: admin_group_service.py  bot_service.py
src/wood_sava_bot/storage/: db.py  models.py  repositories.py
tests/: test_flows.py  test_repository.py
thoughts/shared/specs/: 2026-05-07-wood-sava-bot.md
