[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wood-sava-bot"
version = "0.1.0"
description = "Multi-platform lead intake bot for Telegram, VK, and MAX."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.29",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
]

[project.scripts]
wood-sava-bot = "wood_sava_bot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
